Formatação do pdf, classe de teste para ClienteController